@@ -3,6 +3,14 @@
 	* rename bell.flac into alert.flac
 	avtar-audio.c, avatar.c: adapted
 
+	* avatar.c (avt_show_text_cursor):
+	don't update, when hold_update is set
+	(avt_scroll_up): don't handle cursor here
+
+	* avtterm.c (activate_cursor): new function
+	All callers of avt_activate_cursor changed to activate_cursor
+	(get_character): lock/unlock updates
+
 2009-07-29  Andreas K. Foerster  <info@akfoerster.de>
 
 	* akfavatar.h, avatar.c (avt_pager_mb):
